<resources>
    <string name="app_name">CZ ADSB</string>
    <string name="Login">Login</string>
    <string name="Logout">Logout</string>
    <string name="Filters">Filters</string>
    <string name="Preferences">Preferences</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="show_password">Show password</string>
    <string name="cancel">Cancel</string>
    <string name="login_successful">Login successful.</string>
    <string name="unexpected_error_while_logging_in">Unexpected error while logging in.</string>
    <string name="you_have_been_logged_out">You have been logged out.</string>
    <string name="name_or_password_wrong">Incorrect name or password.</string>
    <string name="could_not_login_client_error">Login failure - client error.</string>
    <string name="could_not_login_server_redirection_error">Login failure - redirection error.</string>
    <string name="could_not_login_server_error">Login failure - server error.</string>
    <string name="altitude">Altitude:</string>
    <string name="speed">Speed:</string>
    <string name="heading">Heading:</string>
    <string name="squawk">Squawk:</string>
    <string name="unknown_aircraft">Unknown aircraft</string>
    <string name="com_auth0_client_id">ITqkED4MFYkEDv9pzE4CW0Al7vTEqS0O</string>
    <string name="com_auth0_domain">czadsb.eu.auth0.com</string>
</resources>
