<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray">

    <TextView
        android:id="@+id/manufacturerTV"
        android:layout_width="304dp"
        android:layout_height="0dp"
        android:text="TextView"
        tools:text="Avions de Transport Regional ATR 42 500"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="150dp"
        android:layout_height="125dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:adjustViewBounds="false"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/manufacturerTV"
        app:srcCompat="@drawable/ic_image_white_24dp" />

    <TableLayout
        android:layout_width="0dp"
        android:layout_height="125dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toRightOf="@+id/imageView"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/manufacturerTV">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="8dp"
                android:text="@string/altitude" />

            <TextView
                android:id="@+id/altTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="12000 m" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="5dp">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="8dp"
                android:text="@string/speed" />

            <TextView
                android:id="@+id/speedTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="860 km/h" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="5dp">

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="8dp"
                android:text="@string/heading" />

            <TextView
                android:id="@+id/headingTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="213.7°" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="5dp">

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="8dp"
                android:text="@string/squawk" />

            <TextView
                android:id="@+id/squawkTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="7000" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="8dp"
                android:text="ICAO:" />

            <TextView
                android:id="@+id/icaoTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="4CAA5F" />
        </TableRow>
    </TableLayout>

</android.support.constraint.ConstraintLayout>